# ada-dev-rag-py-ai

./: .gitignore  README.md  ROADMAP.md  my.py  process_diagrams.py  pyproject.toml  run.py  tasks.md  teste.txt
src/ada_dev_rag_py_ai/: __init__.py  api.py  chat.py  core.py  diagram_processor.py  embeddings.py  image_analysis.py  image_batch_processor.py  main.py  models.py  rag.py
tests/: test_chat.py  test_core.py  test_main.py  test_option_4.py
